# terminus_cosim

./: .gitignore  .gitmodules  README.md  get_c_cov.sh  run.sh  run64.sh
tb_dpi/: Cargo.toml
tb_dpi/src/: lib.rs
tb_dpi/src/mem/: mod.rs  simple.rs
tb_dpi/src/mem/rich/: common.rs  mod.rs  uvm_mem.rs
tb_dpi/src/rpcs/: mod.rs  wait_event.rs
terminus_cluster/: Cargo.toml
terminus_cluster/src/: bus.rs  lib.rs
testbench/: mailbox_cfg.yaml  mem_cfg.yaml  tb.sv  verilator_main.cc
vfw/: Cargo.toml  build.rs
vfw/.cargo/: config  config.toml
vfw/include/: terminus_cosim.h
vfw/src/: lib.rs  link.x
vfw/terminus_cosim_tests/: Cargo.toml  build.rs
vfw/vfw/: Cargo.toml  build.rs
vfw/vfw/.cargo/: config
vfw/vfw/include/: terminus_cosim.h
vfw/vfw/rv32cov_stub/: Cargo.toml  build.rs
vfw/vfw/rv32cov_stub/c/: stubs.c
vfw/vfw/rv32cov_stub/src/: lib.rs
vfw/vfw/src/: lib.rs  link.x
vfw/vfw/tests/: Cargo.toml  build.rs
vfw/vfw/tests/common_c/: gcov_get_gcda.c
vfw/xtask/: Cargo.toml
vfw/xtask/src/: main.rs
