[package]
name = "tb_dpi"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tb_dpi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
mailbox_rs = { git = "https://github.com/shady831213/mailbox_rs", features = ["std", "ptr32"]}
lazy_static = { version = "1"}