[package]
name = "tb_dpi"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tb_dpi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
vhost = { git = "https://github.com/shady831213/vhost", optional=true}
lazy_static = { version = "1"}

[build-dependencies]
v_build_utils = {git = "https://github.com/shady831213/v_build_utils"}

[features]
ptr64 = ["vhost/ptr64"]
ptr32 = ["vhost/ptr32"]