[package]
name = "tb_dpi"
version = "0.1.0"
rust-version = "1.80"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tb_dpi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
mailbox_rs  = { git = "https://github.com/shady831213/mailbox_rs", features = ["std"], optional=true}
lazy_static = { version = "1"}

[features]
ptr64 = ["mailbox_rs/ptr64"]
ptr32 = ["mailbox_rs/ptr32"]