[package]
name = "terminus_cluster"
version = "0.1.0"
authors = ["shady831213 <shady831213@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "terminus_cluster"
crate-type = ["staticlib", "cdylib"]

[dependencies]
terminus = {git = "https://github.com/shady831213/terminus"}
paste = "1"

[features]
rv64 = []
