[package]
name = "terminus_cosim"
version = "0.1.0"
edition = "2021"
links = "terminus_cosim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfw_rs = {git = "https://github.com/shady831213/vfw_rs", features=["max_chs_4", "full_panic", "max_cores_4", "cpu_data_non_priv"]}

[build-dependencies]
vfw_build_utils = {git = "https://github.com/shady831213/vfw_build_utils"}

[workspace]
members = [
    "terminus_cosim_tests",
]

[profile.release]
lto = true