[package]
name = "terminus_cosim_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminus_cosim = { path = ".."}

[build-dependencies]
vfw_build_utils = {git = "https://github.com/shady831213/vfw_build_utils"}